--- a/public/home_page/style.css
+++ b/public/home_page/style.css
@@ -11,7 +11,7 @@ h1 {
     font-size:48px;
 }
 p {
-    font-family: 'Lato', sans-serif;
+    font-family: sans-serif;
     letter-spacing: 1px;
     font-size:14px;
     color: #333333;
